<resources>
    <string name="app_name">QuizCast</string>
    <string name="action_settings">Settings</string>
    <string name="play_menu_item">Play</string>
    <string name="create_game_menu_item">Create Game</string>

    <string name="title_activity_select_quiz">Select Quiz</string>
    <string name="search_for_quiz">Select Quiz</string>
    <string name="browse">Browse</string>
    <string name="view_results">View results</string>

    <string name="search_hint">Search Quiz by name</string>


    <string name="LOGTAG">QUIZCAST_LOG</string>


    <string name="quizzes_url">https://quizcastapp.com/quiz/</string>
    <string name="title_activity_play_quiz_master">PlayQuizMaster</string>

    <string name="title_activity_browse_quizzes">BrowseQuizzes</string>

    <string name="media_route_menu_title">Cast</string>

    <string name="application_id_cast">5E8452EE</string>

    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="name_of_quiz_lobby">Quiz to play: </string>
    <string name="joined_users_lobby">Users joined: </string>
    <string name="lobby_id_text">Lobby id: </string>

    <string name="start_quiz">Start Quiz</string>

    <string name="play_quiz_enter_nickname">Enter nickname:</string>
    <string name="play_quiz_enter_game_id">Enter game id:</string>
    <string name="play_quiz_join_game">Join Game</string>
    <string name="title_activity_select_quiz_type">SelectQuizTypeActivity</string>

    <string name="select_quiz_type_quizmaster">Quiz Master</string>
    <string name="title_activity_quiz_master_lobby">QuizMasterLobbyActivity</string>
    <string name="title_activity_quiz_master_game">QuizMasterGameActivity</string>
    <string name="next_question_quizmaster_game">Next Question</string>
    <string name="finish_quiz_quizmaster_game">Finish</string>
    <string name="correct_answer_label_quizmaster_game">Correct Answer:</string>

    <string name="select_mode">Select Mode: </string>
    <string name="select_a_quiz">Select a quiz: </string>
</resources>
