<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.quizcastapp.quizcast.QuizMasterLobbyActivity"
    tools:showIn="@layout/activity_quiz_master_lobby">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/list_item_padding"
        android:background="@color/colorPrimary"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/list_item_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lobby_id_text"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/colorWriting"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/colorWriting"
                android:text=" #000000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/list_item_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_of_quiz_lobby"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/colorWriting"/>
            <TextView
                android:id="@+id/quiz_name_lobby_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=" test"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/colorWriting"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/start_quiz_button_lobby"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_item_margin"
        android:text="@string/start_quiz"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWriting"
        android:onClick="onClickStartGame"/>



</LinearLayout>
