<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_play_quiz_master"
    tools:context=".PlayQuiz">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout
            android:id="@+id/play_quiz_select_nickname"
            android:background="@color/colorPrimary"
            android:padding="@dimen/list_item_padding"
            android:layout_marginBottom="@dimen/menu_item_margin_bottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textSize="15sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/colorWriting"
                android:layout_marginRight="@dimen/menu_margin_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_quiz_enter_nickname"/>

            <EditText
                android:id="@+id/edit_text_select_nickname"
                android:foreground="@color/colorWriting"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/play_quiz_enter_game_id"
            android:layout_below="@+id/play_quiz_select_nickname"
            android:background="@color/colorPrimary"
            android:padding="@dimen/list_item_padding"
            android:layout_marginBottom="@dimen/menu_item_margin_bottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textSize="15sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/colorWriting"
                android:layout_marginRight="@dimen/menu_margin_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_quiz_enter_game_id"/>

            <EditText
                android:id="@+id/edit_text_enter_game_id"
                android:foreground="@color/colorWriting"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/play_quiz_join_game_button"
            android:layout_below="@+id/play_quiz_enter_game_id"
            android:padding="@dimen/list_item_padding"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWriting"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_quiz_join_game"/>

    </RelativeLayout>

</RelativeLayout>
